# fight_goblin

./: .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/modules/: database.py  objects.py  scraper.py  ufc_website_classes.py
app/modules/web_classes/: ufc_event_classes.py
