[project]
name = "fight-goblin"
version = "0.1.0"
description = "A UFC fight companion that allows friends to predict the outcomes of matches."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "click>=8.2.1",
    "flask>=3.1.1",
    "langchain>=0.3.25",
    "langchain-google>=0.1.1",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=0.3.18",
    "nicegui>=2.19.0",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pymongo>=4.13.0",
    "streamlit>=1.45.1",
]
